2010-11-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/10_linux.in: Add missing load_video with explicit
	GRUB_GFXPAYLOAD_LINUX.

2010-11-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* Makefile.am (libgrub.pp): Propagate the libgrub.a split.

2010-11-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/mdraid1x_linux.c (grub_mdraid_detect): Do not put
	elements with invlid index.
	* grub-core/disk/mdraid_linux.c (grub_mdraid_detect): Likewise.
	* grub-core/disk/raid.c (insert_array): Automatically reallocate
	members.
	* include/grub/raid.h (grub_raid_member): New struct.
	(grub_raid_array): Transform devices and start_sector into usage of
	grub_raid_member. All users updated
	(allocated_devs): New member.

2010-11-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/man/grub-set-default.h2m: Clarify that only saved default entry
	is modified

2010-10-29  BVK Chaitanya  <bvk.groups@gmail.com>

	NetBSD build fix for getline function conflict from gnulib.

	* Makefile.util.def (libgrubkern.a): New library for grub kernel
	components that depend on gnulib headers.
	(libgrubmods.a): Renamed from earlier libgrub.a.
	* conf/Makefile.common: Remove gnulib from *_LIBRARY flags.

2010-10-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-setup.c (setup): Refuse to do a cross-disk embeddingless
	install rather than creating a broken install.

2010-10-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-setup.c (argp): Remove misleading example of installing to
	a partition.

2010-10-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-setup.c (setup): Clarify the error message.

2010-10-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/types.h (grub_target_off_t): Removed no longer used type.

2010-10-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/misc.c
	(grub_make_system_path_relative_to_its_root)
	[HAVE_LIBZFS && HAVE_LIBNVPAIR]: Fix mountpoint return on ZFS.
